apps/veripalvelu/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veripalvelu-dep
  labels:
    app: veripalvelu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: veripalvelu
  template:
    metadata:
      labels:
        app: veripalvelu
    spec:
      containers:
        - name: veripalvelu
          image: tomjtoth/veripalvelu

          command: ["/bin/sh", "-c"]
          args:
            - |
              GEN_RAND_DATA=1 flask run &&
              unset GEN_RAND_DATA &&
              exec gunicorn -w 4 -b 0.0.0.0:8080 app:app

          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veripalvelu-db-dep
  labels:
    app: veripalvelu-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: veripalvelu-db
  template:
    metadata:
      labels:
        app: veripalvelu-db
    spec:
      volumes:
        - name: db-data
          # I actually don't care about this app's data
          emptyDir: {}

        # fetching shema.sql for postgres
        - name: initdb-d
          emptyDir: {}

      containers:
        - name: postgres
          image: postgres:18.1-alpine3.23

          volumeMounts:
            - name: initdb-d
              mountPath: /docker-entrypoint-initdb.d
            - name: db-data
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "vp"]
            initialDelaySeconds: 5
            periodSeconds: 5
