apps/veripalvelu/services.yml
apiVersion: v1
kind: Service
metadata:
  name: veripalvelu-svc
spec:
  type: ClusterIP
  selector:
    app: veripalvelu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: veripalvelu-db-svc
spec:
  type: ClusterIP
  selector:
    app: veripalvelu-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
